--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "SwiftByteEat",
-    "slug": "SwiftByteEat",
+    "slug": "swift-byte-eat",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -16,7 +16,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.swiftbyte.swiftbyteeat"
     },
     "android": {
       "adaptiveIcon": {
@@ -34,6 +35,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "996deca2-61b1-46b7-a6e2-7b36dca33010"
+      }
+    },
+    "owner": "swiftbyte"
   }
 }
