--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "babel-jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
