--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -25,6 +25,7 @@ jobs:
           
   create_preview:
       runs-on: ubuntu-latest
+      needs: test
       steps:
         - uses: actions/checkout@v3
         
