--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@realm/react": "^0.6.2",
     "@swift-byte/switftbytecomponents": "^1.0.8",
     "expo": "~50.0.13",
     "expo-font": "~11.10.3",
@@ -32,7 +33,7 @@
     "react-native-svg": "^15.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-web": "~0.19.6",
-    "realm": "^12.6.2"
+    "realm": "^12.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
